--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
 
-<h1> hello, negreiros</h1>
+<h1>Esclavos dende o porto da Coruña</h1>
 
 <p>A memoria histórica coruñesa esquece convenientemente o labor de negreiros de senlleiras familias. Estas xentes fixeron fortuna dende o porto da Coruña no negocio do esclavismo, transportando africanos capturados na súa terra ata América en penosas condicións.
 <p>Entre estas familias atópanse xxxxx. que a la postre rematou creando o Banco Pastor e Unión Fenosa.</p>
      
-     <p>Moitos dos cartos e das rentas que se disfrutan ainda hoxe na Coruña teñen ese horrendo e aborrecible orixe.</p>
+     <p>Moitos dos cartos e das rentas que se disfrutan ainda hoxe na Coruña teñen esa horrenda e aborrecible orixe.</p>
      
      <p>Para máis información:</p>
      https://www.laopinioncoruna.es/galicia/2013/01/27/proceres-negreros-24925399.html
