--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Comercio de escravos dende o porto da Coruña</h1>
 
 <p>A memoria coruñesa esquece convenientemente o labor de negreiros de senlleiras familias. Estas xentes fixeron fortuna dende o porto da Coruña có comercio de escravos: transportaban africanos capturados na súa terra ata América en penosas condicións.
-<p>Entre eses apelidos senlleiros atópababse, entre outros, Arias, Romeu, de LLano, Marcial del Adalid... e destacado, Barrié. O bisabó do fundador do Banco Pastor e Unión Fenosa, Juan Francisco Barrié D' Abadie, foi o maior traficante de negros do porto da Coruña, con 13 expedicións a Cuba desta natureza.</p>     
+<p>Entre eses apelidos senlleiros atópababse, entre outros, Arias, Romeu, de LLano, Marcial del Adalid... e destacado, Barrié. O bisabó do fundador do Banco Pastor e Unión Fenosa, Juan Francisco Barrié D' Abadie, foi o maior traficante de negros do porto da Coruña con 13 expedicións a Cuba desta natureza.</p>     
      <p>Propiedades e rendas que se disfrutan ainda hoxe na Coruña teñen esa abominable orixe.</p>
      
      <p>Para máis información:</p>
