--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
  
 <head>
 
-     <title>Xeri&oacute;n, o underground, literalmente, que sae de baixo a Torre</title>
+     <title>Xeri&oacute;n coa memoria histórica local</title>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-     <meta name=”keywords” content=”Xeri&oacute;n, FreeXerion, Xerión, ACoruna, Coruna, A Coru&ntildea, Coruña, A Coruña, Coru&ntildea, streetart, arteurbano, pixelart ”>
+     <meta name=”keywords” content=”Xeri&oacute;n, FreeXerion, Xerión, ACoruna, Coruna, A Coru&ntildea, Coruña, A Coruña, Coru&ntildea, streetart, arteurbano, pixelart, memoria historica ”>
 
     
-     <link rel="stylesheet" href="styles.css">
-
+     
+     <style type="text/css">
+          p { color: black; font-family: Verdana; }
+        </style>
 
 </head>
 
