--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
      
      <style type="text/css">
-          p { color: black; font-family: Verdana; }
+          p { color: black; font-family: Verdana; font-size: 18px}
         </style>
 
 </head>
