--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
      
      <style type="text/css">
-          body { color: black; font-family: Verdana; font-size: 18px}
+          body { color: black; font-family: 'Courier New', Courier, monospace; font-size: 18px; padding: 20px;}
         </style>
 
 </head>
