--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     
      
      <style type="text/css">
-          body { color: black; font-family: 'Courier New', Courier, monospace; font-size: 18px; padding: 20px;}
+          body { color: black; font-family: Verdana; font-size: width/100; padding: 5%;}
+
+          h1 { font-size: 3rem}
         </style>
 
 </head>
