--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     
      
      <style type="text/css">
-          body { color: black; font-family: 'Courier New', Courier, monospace; font-size: 20px; padding: 5%; line-height: 1.4em;}
+          body { color: black; font-family: 'Courier New', Courier, monospace; font-size: 24px; padding: 5%; line-height: 1.4em; font-weight: bold}
 
-          h1 { font-size: 3rem; font-weight: bold; line-height: 1em}
+          h1 { font-size: 3.5rem; font-weight: bold; line-height: 1em}
         </style>
 
 </head>
