--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     
      
      <style type="text/css">
-          body { color: black; font-family: Verdana; font-size: 20px; padding: 5%; line-height: 1.4em;}
 
-          h1 { font-size: 3.5rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
+          body { color: rgb(255, 255, 255); font-family: Verdana; font-size: 20px; padding: 5%; line-height: 1.4em; background-color: black;}
+
+          h1 { color: rgb(255, 255, 255); font-size: 3.5rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
         </style>
 
 </head>
