--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
      
      <style type="text/css">
 
-          body { color: rgb(255, 255, 255); font-family: Verdana; font-size: 20px; padding: 5%; line-height: 1.4em; background-color: black;}
+          body { color: #ffffff; font-family: Verdana; font-size: 22px; padding: 5%; line-height: 1.5em; background-color: black;}
 
-          h1 { color: rgb(255, 255, 255); font-size: 3.5rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
+          h1 { color: #ffffff; font-size: 3.5rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
+
+          a:link {color: #00bbff;background-color: transparent;text-decoration: underline;}
+
+          a:visited {color: #00bbff;background-color: transparent;text-decoration: underline;}
+
+          a:hover {color: #00bbff;background-color: transparent;text-decoration: underline;}
+
+          a:active {color: #0055ff;background-color: transparent;text-decoration: underline;}
         </style>
 
 </head>
@@ -21,7 +29,7 @@
 <body>
 
 <h1>Comercio de escravos dende o porto da Coruña</h1>
-
+<br></br>
 <p>A memoria coruñesa esquece convenientemente o labor de negreiros de senlleiras familias. Estas xentes fixeron fortuna dende o porto da Coruña có comercio de escravos: transportaban africanos capturados na súa terra ata América en penosas condicións.
 <p>Entre eses apelidos atópabanse, entre outros, Arias, Blanco, Mens, Romeu, de LLano, Bautista Larragoiti, del Adalid... e destacado, Barrié. O bisabó do fundador do Banco Pastor e Unión Fenosa, Juan Francisco Barrié D' Abadie, foi o maior traficante de negros do porto da Coruña con 13 expedicións a Cuba desta natureza.</p>     
      <p>Propiedades e rendas que se disfrutan ainda hoxe na Coruña teñen esa abominable orixe.</p>
