--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      
      <style type="text/css">
 
-          body { color: #ffffff; font-family: Verdana; font-size: 24px; padding: 5%; line-height: 1.6em; background-color: black;}
+          body { color: #ffffff; font-family: Verdana; font-size: 36pxpx; padding: 5%; line-height: 1.6em; background-color: black;}
 
           h1 { color: #ffffff; font-size: 4rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
 
