--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      
       <br></br>
 
-     <p>Sirva este mosaico como modesto recoñecemento non oficial por parte da cidade underground e como chamamento para incluir este capítulo escuro da cidade na súa memoria histórica.</p>
+     <p>Sirva este mosaico como modesto recoñecemento e admisión non oficial por parte da cidade underground e como chamamento para incluir este capítulo escuro da cidade na súa memoria histórica.</p>
      <p>A Coruña, maio de 2023</p>
         
 </body>
