--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
 
 <body>
 
+     <!--  <img src="negreiros.png" alt="mosaico"> -->
+
+
+     <img
+  srcset="negreiros-480w.png 480w, negreiros-800w.png 800w"
+  sizes="(max-width: 600px) 480px,
+         800px"
+  src="negreiros-800w.png"
+  alt="Mosaico escravista" />
 <h1>Comercio de escravos dende o porto da Coruña</h1>
+<br></br>
 <p>A memoria coruñesa esquece convenientemente o labor de negreiros de senlleiras familias. Estas fixeron fortuna dende o porto da Coruña có comercio de escravos: transportaban africanos capturados na súa terra ata América en penosas condicións.
 <p>Entre eses apelidos atópabanse os Arias, Blanco, Mens, Romeu, de LLano, Bautista Larragoiti, del Adalid... e destacado, Barrié. O bisabó do fundador do Banco Pastor e Unión Fenosa, Juan Francisco Barrié D' Abadie, foi o maior traficante de negros da Coruña con 13 expedicións desta natureza.</p>     
      <p>Propiedades e rendas que se disfrutan ainda hoxe na Coruña teñen esa abominable orixe.</p>
