--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
      
      <style type="text/css">
 
-          body { color: #ffffff; font-family: Verdana; font-size: 48px; padding: 16px; line-height: 1.6em; background-color: black;}
+          html {font-size: calc(15px + 0.390625vw);}
+
+          body { color: #ffffff; font-family: Verdana; padding: 16px; line-height: 1.6em; background-color: black;}
 
           h1 { color: #ffffff; font-size: 5rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
 
