--- a/index_ENG.html
+++ b/index_ENG.html
@@ -17,7 +17,7 @@
 
           p {margin-bottom:2.5em;}
 
-          h1 { color: #ffffff; font-size: 3rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
+          h1 { color: #ffffff; font-size: 3rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1.2em}
 
           a:link {color: #00bbff;background-color: transparent;text-decoration: underline;}
 
@@ -43,7 +43,7 @@
   alt="Mosaico escravista" />
   <h1>Slave trade from the port of A Coruña</h1>
   <br></br>
-  <p>The memory of A Coruña conveniently forgets the action of slavers from reputable families. They made their fortune from the port of A Coruña with the slave trade: they transported Africans captured on their land to America in harsh conditions.
+  <p>The memory of A Coruña conveniently forgets the activity of slavers from reputable families. They made fortune from the port of A Coruña with the slave trade: they transported Africans captured on their land to America in harsh conditions.
         <p>Properties and income that are still enjoyed today in Coruña have this abominable origin.</p>
        
         <p>For more information:</p>
