--- a/index_ESP.html
+++ b/index_ESP.html
@@ -17,7 +17,7 @@
 
           p {margin-bottom:2.5em;}
 
-          h1 { color: #ffffff; font-size: 3rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1em}
+          h1 { color: #ffffff; font-size: 3rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1.2em}
 
           a:link {color: #00bbff;background-color: transparent;text-decoration: underline;}
 
@@ -43,7 +43,7 @@
   alt="Mosaico escravista" />
 <h1>Comercio de esclavos desde el puerto de A Coruña</h1>
 <br></br>
-<p>La memoria coruñesa olvida convenientemente la acción de negreros de reputadas familias. Estas hicieron fortuna desde el puerto de A Coruña con el comercio de esclavos: transportaban africanos capturados en su tierra hasta América en penosas condiciones.
+<p>La memoria coruñesa olvida convenientemente la actividad de negreros de reputadas familias. Estas hicieron fortuna desde el puerto de A Coruña con el comercio de esclavos: transportaban africanos capturados en su tierra hasta América en penosas condiciones.
      <p>Propiedades y rentas que se disfrutan todavía hoy en Coruña tienen este abominable origen.</p>
      
      <p>Para más información:</p>
