--- a/index.html
+++ b/index.html
@@ -6,27 +6,9 @@
      <title>Xeri&oacute;n coa memoria histórica local</title>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
      <meta name=”keywords” content=”Xeri&oacute;n, FreeXerion, Xerión, ACoruna, Coruna, A Coru&ntildea, Coruña, A Coruña, Coru&ntildea, streetart, arteurbano, pixelart, memoria historica ”>
+  
+     <link rel="stylesheet" href="styles.css">
 
-    
-     
-     <style type="text/css">
-
-          html {font-size: calc(18px + 0.490625vw);}
-
-          body { color: #ffffff; font-family: Verdana; padding: 16px; line-height: 1.7em; background-color: black;}
-
-          p {margin-bottom:2.5em;}
-
-          h1 { color: #ffffff; font-size: 3rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1.2em}
-
-          a:link {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-          a:visited {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-          a:hover {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-          a:active {color: #0055ff;background-color: transparent;text-decoration: underline;}
-        </style>
 
 </head>
 
