--- a/index_ESP.html
+++ b/index_ESP.html
@@ -9,24 +9,8 @@
 
     
      
-     <style type="text/css">
+     <link rel="stylesheet" href="styles.css">
 
-          html {font-size: calc(16px + 0.390625vw);}
-
-          body { color: #ffffff; font-family: Verdana; padding: 16px; line-height: 1.7em; background-color: black;}
-
-          p {margin-bottom:2.5em;}
-
-          h1 { color: #ffffff; font-size: 3rem; font-family: 'Courier New', Courier, monospace; font-weight: bold; line-height: 1.2em}
-
-          a:link {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-          a:visited {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-          a:hover {color: #00bbff;background-color: transparent;text-decoration: underline;}
-
-          a:active {color: #0055ff;background-color: transparent;text-decoration: underline;}
-        </style>
 
 </head>
 
