--- a/index_ENG.html
+++ b/index_ENG.html
@@ -39,7 +39,7 @@
        
          <br></br>
   
-        <p>May this mosaic serve as a modest recognition and unofficial admission and as a call to include this dark chapter of the city in its historical memory.</p>
+        <p>May this mosaic serve as a modest recognition and as a call to include this dark chapter of the city in its historical memory.</p>
         <p>A Coruña, May 2023</p>
         
 </body>
