--- a/index_ESP.html
+++ b/index_ESP.html
@@ -39,7 +39,7 @@
      
       <br></br>
 
-     <p>Sirva este mosaico como modesto reconocimiento y admisión no oficial y como llamamiento para incluir este oscuro capítulo de la ciudad en su memoria histórica.</p>
+     <p>Sirva este mosaico como modesto reconocimiento no oficial y como llamamiento para incluir este oscuro capítulo de la ciudad en su memoria histórica.</p>
      <p>A Coruña, mayo de 2023</p>
         
 </body>
