--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
      <!--  <img src="negreiros.png" alt="mosaico"> -->
 
-<p><a href="index_ENG.html">ENG</a> - <a href="index_ESP.html">ESP</a></p>
+<p><a href="index_ENG.html">ENGLISH</a> - <a href="index_ESP.html">ESPAÑOL</a></p>
      <img
   srcset="negreiros-480w.png 480w, negreiros-800w.png 800w"
   sizes="(max-width: 600px) 480px,
