--- a/index_ESP.html
+++ b/index_ESP.html
@@ -18,7 +18,7 @@
 
      <!--  <img src="negreiros.png" alt="mosaico"> -->
 
-<p><a href="index.html">GAL</a> - <a href="index_ENG.html">ENG</a></p>
+<p><a href="index.html">GALEGO</a> - <a href="index_ENG.html">ENGLISH</a></p>
      <img
   srcset="negreiros-480w.png 480w, negreiros-800w.png 800w"
   sizes="(max-width: 600px) 480px,
