--- a/index_ENG.html
+++ b/index_ENG.html
@@ -3,6 +3,16 @@
  
 <head>
 
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BRGHPK7HJP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BRGHPK7HJP');
+</script>
+
      <title>Xeri&oacute;n coa memoria histórica local</title>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
      <meta name=”keywords” content=”Xeri&oacute;n, FreeXerion, Xerión, ACoruna, Coruna, A Coru&ntildea, Coruña, A Coruña, Coru&ntildea, streetart, arteurbano, pixelart, memoria historica ”>
