desde este puerto
desde este puerto

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   alt="Mosaico escravista" />
 <h1>Comercio de escravos dende o porto da Coruña</h1>
 <br></br>
-<p>A memoria coruñesa esquece convenientemente o labor de negreiros de senlleiras familias. Estas fixeron fortuna dende o porto da Coruña co comercio de escravos: transportaban africanos capturados na súa terra ata América en penosas condicións.
+<p>A memoria coruñesa esquece convenientemente o labor de negreiros de senlleiras familias. Estas fixeron fortuna dende este mesmo porto da Coruña co comercio de escravos: transportaban africanos capturados na súa terra ata América en penosas condicións.
      <p>Propiedades e rendas que se gozan ainda hoxe na Coruña teñen esa abominable orixe.</p>
      
      <p>Para máis información:</p>
