--- a/index_ENG.html
+++ b/index_ENG.html
@@ -37,7 +37,7 @@
   alt="Mosaico escravista" />
   <h1>Slave trade from the port of A Coruña</h1>
   <br></br>
-  <p>The memory of A Coruña conveniently forgets the activity of slavers from reputable families. They made fortune from the port of A Coruña with the slave trade: they transported Africans captured on their land to America in harsh conditions.
+  <p>The memory of A Coruña conveniently forgets the activity of slavers from reputable families. They made fortune from this same port of A Coruña with the slave trade: they transported Africans captured on their land to America in harsh conditions.
         <p>Properties and income that are still enjoyed today in Coruña have this abominable origin.</p>
        
         <p>For more information:</p>
