--- a/index_ESP.html
+++ b/index_ESP.html
@@ -37,7 +37,7 @@
   alt="Mosaico escravista" />
 <h1>Comercio de esclavos desde el puerto de A Coruña</h1>
 <br></br>
-<p>La memoria coruñesa olvida convenientemente la actividad de negreros de reputadas familias. Estas hicieron fortuna desde el puerto de A Coruña con el comercio de esclavos: transportaban africanos capturados en su tierra hasta América en penosas condiciones.
+<p>La memoria coruñesa olvida convenientemente la actividad de negreros de reputadas familias. Estas hicieron fortuna desde este mismo puerto de A Coruña con el comercio de esclavos: transportaban africanos capturados en su tierra hasta América en penosas condiciones.
      <p>Propiedades y rentas que se disfrutan todavía hoy en Coruña tienen este abominable origen.</p>
      
      <p>Para más información:</p>
