--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
      
       <br></br>
 
-     <p>Sirva este mosaico como modesto recoñecemento non oficial e como chamamento para incluir este capítulo escuro da cidade na súa memoria histórica.</p>
-     <p>A Coruña, maio de 2023</p>
+     <p>Sirva este mosaico como modesto recoñecemento non oficial e como chamamento para incluir este capítulo escuro da cidade na súa memoria histórica. </p>
+     <p>A Coruña, maio de 2023.</p>
         
 </body>
 </html>
