--- a/index_ENG.html
+++ b/index_ENG.html
@@ -49,8 +49,8 @@
        
          <br></br>
   
-        <p>May this mosaic serve as a modest recognition and as a call to include this dark chapter of the city in its historical memory.</p>
-        <p>A Coruña, May 2023</p>
+        <p>May this mosaic serve as a modest recognition and as a call to include this dark chapter of the city in its historical memory. </p>
+        <p>A Coruña, May 2023.</p>
         
 </body>
 </html>
